[package]
name = "fltk-float"
version = "0.1.4"
authors = ["Vojislav Stojkovic <zinthys@gmail.com>"]
edition = "2021"

description = "Flexible LayOut Autosizing Toolkit for fltk-rs"
readme = "README.md"
license = "Apache-2.0"
keywords = ["gui", "ui", "user-interface", "widgets", "layout"]

repository = "https://github.com/vstojkovic/fltk-float"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1.4.4"

[features]
fltk-bundled = ["fltk/fltk-bundled"]
static-msvcrt = ["fltk/static-msvcrt"]
